# swarm_digital_twin

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  DOCKER_DRIVER_SETUP.md  DOCKER_VERIFICATION_REPORT.md  Dockerfile  Dockerfile.sitl  README.md  ROADMAP.md  TESTING.md  TODO.md  docker-compose.yml  run_scenario.sh
docker/: entrypoint.sh
docs/: QUICKSTART.md  REFACTOR_PLAN.md  architecture.md  development.md  k8s_runbook.md  kubernetes.md  ml_pipeline.md  ml_pipeline.pl.md  ml_tutorial.md  ml_tutorial.pl.md  nightly_lane.md  physics.md  physics_details.md  testing.md
missions/: fw_158.waypoints  fw_178.waypoints  fw_185.waypoints  quad_missions.py
perception/: README.md  package.xml  setup.py
scripts/: docker_netem.sh  k3s_import_images.sh  ml_evaluate_waypoint.sh  ml_run_pipeline.sh  ml_train_waypoint.sh  push_images.sh  run_sitl_mission.sh  sitl_entrypoint.sh  swarm_netem.sh  verify_namespaces.sh
simulation/: README.md  _test_common.py  acceptance_matrix.py  acceptance_report.py  conftest.py  dataflash_recorder.py  drone_physics.py  drone_scenario.py  flight_log.py  gz_terrain_emulator.py  gz_wind_plugin_emulator.py  live_telemetry.py  mavlink_bridge.py  missions.py  mock_drone_sim.py  physics_live_replay.py  physics_parity.py  run_test_graphical.sh  (+23 more)
swarm_control/: Cargo.toml  TESTING.md  package.xml  protoc-wrapper.sh
swarm_control/px4_msgs_mock/src/: lib.rs
swarm_control/src/: communication.rs  consensus.rs  consensus_transport.rs  driver_core.rs  formation.rs  lib.rs  main.rs  px4_safety.rs  tests.rs  tests_standalone.rs  timing.rs  transport.rs
(+157 files in other folders)
