[package]
name = "swarm_control_core"
version = "0.1.0"
authors = ["beret <beret@hipisi.org.pl>", "Marysia Software Limited <ceo@marysia.app>"]
edition = "2021"
description = "Core swarm control logic for Swarm Digital Twin (app.marysia.drone)"
homepage = "https://marysia.app"

[dependencies]
px4_msgs = { path = "./px4_msgs_mock" }
tokio = { version = "1.10", features = ["full"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
zenoh = "1.7"
flume = "0.11"
raft = "0.7"
slog = "2"
slog-stdlog = "4"
protobuf = "2.28"

[lib]
name = "swarm_control_core"
path = "src/lib.rs"

[[bin]]
name = "swarm_node"
path = "src/main.rs"

[[bin]]
name = "sim_realtime_driver"
path = "src/bin/sim_realtime_driver.rs"
